// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accessibility should expose correct accessibility tree if accessibility properties are set 1`] = `
{
  "children": [
    {
      "children": [
        {
          "name": " ",
          "role": "StaticText",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "role": "none",
        },
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "Loading page content",
  "role": "alert",
}
`;

exports[`accessibility should expose correct initial accessibility tree 1`] = `
{
  "children": [
    {
      "children": [
        {
          "name": " ",
          "role": "StaticText",
        },
      ],
      "role": "none",
    },
    {
      "children": [
        {
          "role": "none",
        },
        {
          "role": "none",
        },
      ],
      "role": "none",
    },
  ],
  "name": "",
  "role": "alert",
}
`;
